// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Rangeslider -  renders with a value label 1`] = `
<Rangeslider
  valueLabel={true}
>
  <div>
    <div
      className="rangeslider"
    >
      

      <input
        type="range"
      />
      

      <ValueLabel>
        <output
          className="value-label"
        >
          
		
          <p>
            
			
            <span
              data-rs-value={true}
            />
            
			
          </p>
          
	
        </output>
      </ValueLabel>
      

    </div>
    <div
      className="value-range "
    >
      <small />
      <small />
    </div>
  </div>
</Rangeslider>
`;

exports[`Component: Rangeslider -  renders with a value label and a value label postfix 1`] = `
<Rangeslider
  valueLabel={true}
  valueLabelPostfix="test"
>
  <div>
    <div
      className="rangeslider"
    >
      

      <input
        type="range"
      />
      

      <ValueLabel>
        <output
          className="value-label"
        >
          
		
          <p>
            
			
            <span
              data-rs-value={true}
            />
            
			
            <span>
              test
            </span>
            
		
          </p>
          
	
        </output>
      </ValueLabel>
      

    </div>
    <div
      className="value-range "
    >
      <small />
      <small />
    </div>
  </div>
</Rangeslider>
`;

exports[`Component: Rangeslider -  renders with a value label and a value label prefix 1`] = `
<Rangeslider
  valueLabel={true}
  valueLabelPrefix="test"
>
  <div>
    <div
      className="rangeslider"
    >
      

      <input
        type="range"
      />
      

      <ValueLabel>
        <output
          className="value-label"
        >
          
		
          <p>
            
			
            <span>
              test
            </span>
            
			
            <span
              data-rs-value={true}
            />
            
			
          </p>
          
	
        </output>
      </ValueLabel>
      

    </div>
    <div
      className="value-range "
    >
      <small />
      <small />
    </div>
  </div>
</Rangeslider>
`;

exports[`Component: Rangeslider -  renders without label 1`] = `
<Rangeslider>
  <div>
    <div
      className="rangeslider"
    >
      

      <input
        type="range"
      />
    </div>
    <div
      className="value-range "
    >
      <small />
      <small />
    </div>
  </div>
</Rangeslider>
`;
